--- a/com.weltevree.poos.feature/pom.xml
+++ b/com.weltevree.poos.feature/pom.xml
@@ -3,13 +3,13 @@
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <artifactId>com.weltevree.poos.parent</artifactId>
+    <artifactId>com.weltevree.polos.parent</artifactId>
     <version>1.0.0-SNAPSHOT</version>
-<relativePath>../com.weltevree.poos.parent</relativePath>
-  	<groupId>poos</groupId>
+<relativePath>../com.weltevree.polos.parent</relativePath>
+  	<groupId>polos</groupId>
   </parent>
-  <artifactId>com.weltevree.poos.feature</artifactId>
+  <artifactId>com.weltevree.polos.feature</artifactId>
   <version>1.0.0-SNAPSHOT</version>
   <packaging>eclipse-feature</packaging>
-  <groupId>poos</groupId>
+  <groupId>polos</groupId>
 </project>
