--- a/com.weltevree.poos.product/.project
+++ b/com.weltevree.poos.product/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>com.weltevree.poos.product</name>
+	<name>com.weltevree.polos.product</name>
 	<comment></comment>
 	<projects>
 	</projects>
