--- a/org.apache.felix.webconsole/pom.xml
+++ b/org.apache.felix.webconsole/pom.xml
@@ -3,13 +3,13 @@
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <artifactId>com.weltevree.poos.parent</artifactId>
+    <artifactId>com.weltevree.polos.parent</artifactId>
     <version>1.0.0-SNAPSHOT</version>
-    <relativePath>../com.weltevree.poos.parent</relativePath>
-  	<groupId>poos</groupId>
+    <relativePath>../com.weltevree.polos.parent</relativePath>
+  	<groupId>polos</groupId>
   </parent>
   <artifactId>org.apache.felix.webconsole</artifactId>
   <version>4.2.2.all</version>
   <packaging>eclipse-plugin</packaging>
-  <groupId>poos</groupId>
+  <groupId>polos</groupId>
 </project>
