--- a/pom.xml
+++ b/pom.xml
@@ -2,11 +2,11 @@
 <project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>com.weltevree.poos.parent</groupId>
-  <artifactId>com.weltevree.poos.aggregator</artifactId>
+  <groupId>com.weltevree.polos.parent</groupId>
+  <artifactId>com.weltevree.polos.aggregator</artifactId>
   <version>1.0.0-SNAPSHOT</version>
   <packaging>pom</packaging>
   <modules>
-<module>com.weltevree.poos.parent</module>
+<module>com.weltevree.polos.parent</module>
 </modules>
 </project>
