--- a/com.weltevree.polos.parent/pom.xml
+++ b/com.weltevree.polos.parent/pom.xml
@@ -28,7 +28,7 @@
 		<repository>
 			<id>kepler</id>
 			<layout>p2</layout>
-			<url>http://download.eclipse.org/releases/kepler</url>
+			<url>http://download.eclipse.org/releases/luna</url>
 		</repository>
 
 	</repositories>
