--- a/com.weltevree.polos.parent/pom.xml
+++ b/com.weltevree.polos.parent/pom.xml
@@ -122,5 +122,7 @@
 		<module>../com.weltevree.polos.ecf.remoteservices.feature</module>
 		<module>../com.weltevree.polos.product</module>
 		<module>../org.apache.felix.webconsole</module>
+		<module>../com.pi4j</module>
+		<module>../com.pi4j.feature</module>
 	</modules>
 </project>
