Adding pi4j binaries

--- a/com.pi4j/build.properties
+++ b/com.pi4j/build.properties
@@ -2,7 +2,7 @@ source.. = src/
 output.. = bin/
 bin.includes = META-INF/,\
                .,\
-               lib/pi4j-core.jar,\
-               lib/pi4j-device.jar,\
-               lib/pi4j-gpio-extension.jar,\
-               lib/pi4j-service.jar
+               pi4j-0.0.5/pi4j-core.jar,\
+               pi4j-0.0.5/pi4j-device.jar,\
+               pi4j-0.0.5/pi4j-gpio-extension.jar,\
+               pi4j-0.0.5/pi4j-service.jar
