--- a/extras/org.apache.felix.fileinstall/pom.xml
+++ b/extras/org.apache.felix.fileinstall/pom.xml
@@ -8,8 +8,8 @@
 <relativePath>../../com.weltevree.polos.parent</relativePath>
   	<groupId>polos</groupId>
   </parent>
-  <artifactId>com.weltevree.polos.ecf.remoteservices.feature</artifactId>
-  <version>1.0.0-SNAPSHOT</version>
-  <packaging>eclipse-feature</packaging>
+  <artifactId>org.apache.felix.fileinstall</artifactId>
+  <version>3.4.0-SNAPSHOT</version>
+  <packaging>eclipse-plugin</packaging>
   <groupId>polos</groupId>
 </project>
