--- a/extras/org.apache.felix.webconsole.feature/pom.xml
+++ b/extras/org.apache.felix.webconsole.feature/pom.xml
@@ -6,19 +6,12 @@
 	<parent>
 		<artifactId>com.weltevree.polos.parent</artifactId>
 		<version>1.0.0-SNAPSHOT</version>
-		<relativePath>../com.weltevree.polos.parent</relativePath>
+		<relativePath>../../com.weltevree.polos.parent</relativePath>
 		<groupId>polos</groupId>
 	</parent>
-	<artifactId>com.weltevree.polos.feature</artifactId>
+	
+	<artifactId>org.apache.felix.webconsole.feature</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
 	<packaging>eclipse-feature</packaging>
 	<groupId>polos</groupId>
-
-	<dependencies>
-		<dependency>
-			<groupId>org.apache.felix</groupId>
-			<artifactId>org.apache.felix.fileinstall</artifactId>
-			<version>3.4.0</version>
-		</dependency>
-	</dependencies>
 </project>
