Adding fileinstall and webconsole binaries

--- a/extras/org.apache.felix.fileinstall/build.properties
+++ b/extras/org.apache.felix.fileinstall/build.properties
@@ -1,5 +1,7 @@
-source.. = src/
-output.. = bin/
+source.. = .
+output.. = .
 bin.includes = META-INF/,\
                .,\
-               org.apache.felix.fileinstall-3.4.0.jar
+               OSGI-INF/,\
+               org/
+
