--- a/extras/org.apache.felix.fileinstall/pom.xml
+++ b/extras/org.apache.felix.fileinstall/pom.xml
@@ -9,7 +9,7 @@
   	<groupId>polos</groupId>
   </parent>
   <artifactId>org.apache.felix.fileinstall</artifactId>
-  <version>3.4.0-SNAPSHOT</version>
+  <version>3.4.0</version>
   <packaging>eclipse-plugin</packaging>
   <groupId>polos</groupId>
 </project>
