--- a/extras/com.weltevree.pipolos.ecf.remoteservices.feature/.project
+++ b/extras/com.weltevree.pipolos.ecf.remoteservices.feature/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>com.weltevree.polos.ecf.remoteservices.feature</name>
+	<name>com.weltevree.pipolos.ecf.remoteservices.feature</name>
 	<comment></comment>
 	<projects>
 	</projects>
