--- a/extras/org.apache.felix.webconsole.feature/pom.xml
+++ b/extras/org.apache.felix.webconsole.feature/pom.xml
@@ -4,14 +4,14 @@
 	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<artifactId>com.weltevree.polos.parent</artifactId>
+		<artifactId>com.weltevree.pipolos.parent</artifactId>
 		<version>1.0.0-SNAPSHOT</version>
-		<relativePath>../../com.weltevree.polos.parent</relativePath>
-		<groupId>polos</groupId>
+		<relativePath>../../com.weltevree.pipolos.parent</relativePath>
+		<groupId>pipolos</groupId>
 	</parent>
 	
 	<artifactId>org.apache.felix.webconsole.feature</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
 	<packaging>eclipse-feature</packaging>
-	<groupId>polos</groupId>
+	<groupId>pipolos</groupId>
 </project>
