--- a/com.weltevree.pipolos.parent/pom.xml
+++ b/com.weltevree.pipolos.parent/pom.xml
@@ -72,7 +72,7 @@
 					<pomDependencies>consider</pomDependencies>
 					<!-- <allowConflictingDependencies>true</allowConflictingDependencies> -->
 					<environments>
-						<environment>
+<!-- 						<environment>
 							<os>win32</os>
 							<ws>win32</ws>
 							<arch>x86_64</arch>
@@ -82,7 +82,7 @@
 							<os>win32</os>
 							<ws>win32</ws>
 							<arch>x86</arch>
-						</environment>
+						</environment> -->
 
 						<environment>
 							<os>linux</os>
@@ -90,7 +90,7 @@
 							<arch>x86</arch>
 						</environment>
 
-						<environment>
+<!-- 						<environment>
 							<os>macosx</os>
 							<ws>cocoa</ws>
 							<arch>x86_64</arch>
@@ -106,7 +106,7 @@
 							<os>win32</os>
 							<ws>win32</ws>
 							<arch>x86</arch>
-						</environment>
+						</environment> -->
 
 					</environments>
 					<filters>
